--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,4 @@ server:
   port: 8081
 spring:  application:    name: data-storage-service
     description: Data Storage Service for storing data of polls-app
-    baseDirectory: D:\PROJETCS\anonymous-polls\uploads
+    upload-directory: D:\PROJETCS\anonymous-polls\uploads
