--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,7 +3,7 @@ spring:
     config:
       discovery:
         enabled: true
-      uri: "http://config-server"
+        service-id: "config-server"
 
 eureka:
   client:
@@ -16,3 +16,9 @@ server:
 app:
   uploads:
     base-dir: "${user.home}/Desktop"
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
