added mongodb ops on Form

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,7 +4,11 @@ spring:
       discovery:
         enabled: true
         service-id: "config-server"
-
+  data:
+    mongodb:
+      host: "localhost"
+      port: 27017
+      database: "survey_app"
 eureka:
   client:
     service-url:
