--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ server:
   port: 0
 
 app:
-  storage-strategy: "file"
+  storage-strategy: "database"
   uploads:
     base-dir: "${user.home}/Desktop"
 
